--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
     <body>
         <div class="maincontent">
         {{>header}}
+        <p>This site is created by Dhru Dholariya, as apart of learning node js!!</p>
         <img class="portrait" src="/img/me.jpg">
         </div>
         {{>footer}}
