--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -58,5 +58,5 @@ button{
     background-color: #fff;
 }
 body {
-  background-image: url('../img/background.jpg');
+  background-image: url('../img/background3.jpg');
 }
